syntax = "proto3";

package buildbarn.configuration.bb_worker;

import "pkg/proto/configuration/blobstore/blobstore.proto";

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/configuration/bb_worker";

message WorkerConfiguration {
  // Configuration for blob storage.
  buildbarn.configuration.blobstore.BlobstoreConfiguration blobstore = 1;

  // URL of the Buildbarn Browser, shown to the user upon build completion.
  string browser_url = 2;

  // Directory where builds take place. Defaults to "/worker/build".
  string build_directory_path = 3;

  // Directory where build input files are cached. Defaults to "/worker/cache".
  string cache_directory_path = 4;

  // Maximum number of files in the cache. Defaults to 10000.
  uint64 maximum_cache_file_count = 10;

  // Maximum total size of the cache in bytes. Defaults to 1024*1024*1024, i.e. 1 GiB.
  uint64 maximum_cache_size_bytes = 11;

  // Maximum number of directory listings to keep in memory. Defaults to 1000.
  uint64 maximum_memory_cached_directories = 12;

  // Number of actions to run concurrently. Defaults to 1.
  uint64 concurrency = 5;

  // Maximum Protobuf message size to unmarshal. Defaults to 16*1024*1024.
  uint64 maximum_message_size_bytes = 6;

  // Address of the runner to connect to. Defaults to "unix:///worker/runner".
  string runner_address = 7;

  // Address of the scheduler to connect to.
  string scheduler_address = 8;

  // Address on which to listen to expose Prometheus metrics. Defaults to ":80".
  string metrics_listen_address = 9;
}
